--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 altair==5.5.0
 attrs==25.1.0
+bcrypt==4.2.1
 blinker==1.9.0
 cachetools==5.5.1
 certifi==2024.12.14
+cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
+cryptography==44.0.0
 gitdb==4.0.12
 GitPython==3.1.44
 idna==3.10
@@ -18,11 +21,15 @@ narwhals==1.24.1
 numpy==2.2.2
 packaging==24.2
 pandas==2.2.3
+paramiko==3.5.0
 pillow==11.1.0
 protobuf==5.29.3
 pyarrow==19.0.0
+pycparser==2.22
 pydeck==0.9.1
 Pygments==2.19.1
+PyMySQL==1.1.1
+PyNaCl==1.5.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
@@ -32,6 +39,7 @@ rich==13.9.4
 rpds-py==0.22.3
 six==1.17.0
 smmap==5.0.2
+sshtunnel==0.4.0
 streamlit==1.41.1
 tenacity==9.0.0
 toml==0.10.2
