--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 ## Enviroment
 .GLPI-reports
 .env
+images/*.png
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,windows,linux,macos
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,windows,linux,macos
